Fixing the alignment of News cards

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ body {
     border-radius: 15px;
     background-color: #2d2d2d;
     color: snow;
+    margin: 20px;
 }
 .main-heading{
   font-size: 100px;
@@ -141,7 +142,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 10px ;
+  margin: 20px ;
+  margin-left: 50px;
 }
 .news-card:hover {
   cursor: pointer;
@@ -172,7 +174,8 @@ body {
 }
 .news-title {
   text-align: center;
-  margin: 10px
+  margin: 10px;
+  font-size: 24px;
   /* color: ; */
 }
 .news-content {
